<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/infoTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="623dp"
        android:text="@string/infoTitleText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/command1Text"
        android:layout_width="397dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="544dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/command1Text"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTitle2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/command2Text"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="494dp"
        android:text="@string/command2Text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command1Text"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/command3Text"
        android:layout_width="390dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="424dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/command3Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command2Text" />

    <EditText
        android:id="@+id/command4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="356dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/command4Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command3Text" />

    <EditText
        android:id="@+id/command5Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="284dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/command5Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command4Text" />
</androidx.constraintlayout.widget.ConstraintLayout>